https://github.com/eclipse-ee4j/jaxb-ri/issues/1461
Automatic updates
https://j2eeguys.com/updater

Signed-off-by: Steve Davidson <steve@j2eeguys.com>